2001-05-11  Chris Abbey  <cabbey@bresnanlink.net>

	* jikes.spec: takes Dave's name out so people stop claiming
	to be him. Also update the version to 1.14

2001-05-10  Chris Abbey  <cabbey@bresnanlink.net>

	* src/option.cpp (Option::Option): make sure classpath,
	bootclasspath, sourcepath and extdirs are not null before
	being handed over to cygwin to convert the paths. Also
	flagged some potential memory leaks.

2001-05-09  Chris Abbey  <cabbey@bresnanlink.net>

	* acinclude.m4:
	* src/config.h.in:
	* src/m4/ac_check_iconv.m4:
	* src/m4/ac_find_encodign.m4:
	* src/m4/ac_try_encoding.m4: add support to probe for
	the correct combo of target encoding and byteswapping
	for iconv on this platform.
	* src/stream.cpp: make use of probed values instead
	of hardcoded. Correct byteswapping to handle all four
	bytes when sizeof(wchar_t) is 4, bypass swapping if
	possible.
	* aclocal.m4:
	* configure: regenerated

2001-05-07  Pascal Davoust  <davoustp@yahoo.com>

	* long.cpp (LongInt::ConstantCleanup):
	fix MSVC build break because the compiler
	doesn't allow automated conversion of a const X*
	to a void*. Explicit cast (without const modifier)
	used.
	* definite.cpp (DefiniteSwitchStatement):
	fix MSVC build break because of duplicate
	variables in 'for' loops.

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp (EmitCheckForNull): Add a method
	which emits a check for null-qualified expressions,
	shared between...
	(EmitClassInstanceCreationExpression): 
	(EmitSuperInvocation): Use EmitCheckForNull to
	improve checks of qualified expressions (bugs 171,
	419).
	* src/body.cpp (ProcessSuperCall): Fix qualified
	super calls to allow subclasses of the enclosing
	class, in line with JLS 8.8.5.1 (bug 401).

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitFieldAccessLhsBase):
	Removed redundant code.
	(EmitAssignmentExpression, EmitMethodInvocation)
	(LoadVariable, LoadReference): Fix assignments